SAKIII-2428 fixing overflow issue for IE7 in group info dialog widget

--- a/devwidgets/groupbasicinfo/css/groupbasicinfo_widget.css
+++ b/devwidgets/groupbasicinfo/css/groupbasicinfo_widget.css
@@ -7,7 +7,7 @@
 .dialog #groupbasicinfo_generalinfo h2{border-bottom:1px solid #EBEBEB;color:#5A6A7C;font-size:16px;font-weight:normal;margin:20px 0;padding:0 0 5px 5px;}
 .dialog #groupbasicinfo_generalinfo .groupbasicinfo_generalinfo_content{font-weight:bold;margin-bottom:5px;}
 .dialog #groupbasicinfo_generalinfo div.groupbasicinfo_generalinfo_content{float:left;padding:3px 0;}
-.dialog #groupbasicinfo_generalinfo .groupbasicinfo_generalinfo_subcontainer{clear:both;margin:4px 0;overflow:auto;padding:1px 0;}
+.dialog #groupbasicinfo_generalinfo .groupbasicinfo_generalinfo_subcontainer{clear:both;margin:4px 0;overflow:hidden;padding:1px 0;}
 .dialog #groupbasicinfo_generalinfo .groupbasicinfo_generalinfo_label,.dialog .groupbasicinfo_generalinfo label{color:#666;clear:both;display:block;float:left;margin-right:5px;padding:3px 0;text-align:left;width:100%;}
 .dialog .groupbasicinfo_generalinfo_subcontainer p{color:#999;font-size:.9em;margin:0 0 15px;width:400px;}
 .dialog .groupbasicinfo_info{clear:both;color:#aaa;font-size:.9em;margin:-3px 0 5px;}
